<resources>
    <string name="app_name">ReeChat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">login</string>
    <string name="welcome">Welcome</string>
    <string name="password">password</string>
    <string name="username">WriteUserName</string>
    <string name="logout">SinOut</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
</resources>